排行榜手機版完成。

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,17 +17,15 @@ const articleStyle = `background-image: url('${bgImageUrl}');`;
 ---
 
 <Layout>
-  <Nav />
-  <Banner />
+  <!-- <Nav />
+  <Banner /> -->
   <section class="articles" style={articleStyle}>
-    <div class="topthree-container">
-      <Topthree />
-    </div>
-    <Booklist />
+    <Topthree />
+    <!-- <Booklist /> -->
   </section>
-  <Spnosor />
+  <!-- <Spnosor />
   <Rolltop />
-  <Foot />
+  <Foot /> -->
 
   <style lang="scss">
     // .topthree-container {
