--- a/src/components/topthree.astro
+++ b/src/components/topthree.astro
@@ -306,7 +306,7 @@ import { pgwWrap } from "../js/pgw.js";
     width: 100%;
     max-width: 470px;
     margin: 0 auto;
-    padding: 50px 0 60px 0;
+    padding: 50px 16px 60px 12px;
 
     /* 頂部標題圖片 */
     &__header-image {
@@ -314,20 +314,15 @@ import { pgwWrap } from "../js/pgw.js";
       max-width: 300px;
       margin: 0 auto;
       display: block;
-      @media (max-width: 450px) {
-        max-width: 165px;
+      @media (max-width: 480px) {
+        max-width: 240px;
       }
     }
     &__layout {
       display: flex;
-      justify-content: space-between; /* 改為 space-between，讓圖片和內容分別在兩端 */
+      justify-content: space-between;
       align-items: center;
-      width: 100%; /* 確保佔滿整個卡片寬度 */
-      gap: 10px;
-      @media (max-width: 450px) {
-        flex-direction: column;
-        gap: 5px;
-      }
+      width: 100%;
     }
 
     /* 網格布局 */
@@ -350,6 +345,10 @@ import { pgwWrap } from "../js/pgw.js";
       margin: 0 auto;
       padding: 0 0 0 20px;
       max-width: 100%;
+      @media (max-width: 460px) {
+        height: 50px;
+        padding: 0;
+      }
       &::before {
         content: "";
         position: absolute;
@@ -357,11 +356,17 @@ import { pgwWrap } from "../js/pgw.js";
         bottom: 0;
         right: -1px;
         width: 28%;
-        background-color: rgba(#f2ede5, 1); // 半透明灰色
-        transform: skewX(-15deg); // 15度傾斜
-        z-index: 1; // 置於內容之下
+        background-color: rgba(#f2ede5, 1);
+        transform: skewX(-15deg);
+        z-index: 1;
         overflow: hidden;
         border-radius: 0 45px 23px 0;
+        @media (max-width: 410px) {
+          width: 30%;
+        }
+        @media (max-width: 410px) {
+          width: 31%;
+        }
       }
     }
     /* 卡片內圖片容器 */
@@ -374,6 +379,9 @@ import { pgwWrap } from "../js/pgw.js";
       display: flex;
       justify-content: center;
       align-items: center;
+      @media (max-width: 460px) {
+        flex: 0 0 70px;
+      }
     }
 
     /* 卡片內圖片 */
@@ -385,6 +393,9 @@ import { pgwWrap } from "../js/pgw.js";
       object-fit: cover;
       object-position: center;
       border-radius: 50%;
+      @media (max-width: 460px) {
+        max-width: 70px;
+      }
     }
 
     /* 卡片內容區 */
@@ -392,15 +403,9 @@ import { pgwWrap } from "../js/pgw.js";
       padding: 1rem;
       display: flex;
       flex: 1;
-      justify-content: flex-end;
       align-items: center;
-      min-width: 0;
-
-      @media (max-width: 450px) {
-        padding: 0.5rem;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 5px;
+      @media (max-width: 460px) {
+        padding: 1rem 1rem 1rem 0.5rem;
       }
     }
 
@@ -410,8 +415,14 @@ import { pgwWrap } from "../js/pgw.js";
       color: #000000;
       font-weight: 600;
       flex: 1;
+      line-height: normal;
       text-align: left;
-      margin-right: 15px;
+      @media (max-width: 460px) {
+        font-size: 18px;
+      }
+      @media (max-width: 360px) {
+        font-size: 16px;
+      }
     }
 
     /* 投票數量 */
@@ -424,6 +435,9 @@ import { pgwWrap } from "../js/pgw.js";
         font-size: 22px;
         color: #000;
         display: block;
+        @media (max-width: 460px) {
+          font-size: 18px;
+        }
       }
 
       &-text {
