--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,29 +21,13 @@ const articleStyle = `background-image: url('${bgImageUrl}');`;
   <Banner /> -->
   <section class="articles" style={articleStyle}>
     <Topthree />
-    <!-- <Booklist /> -->
+    <Booklist />
   </section>
   <!-- <Spnosor />
   <Rolltop />
   <Foot /> -->
 
   <style lang="scss">
-    // .topthree-container {
-    //   // margin-top: -160px; /* 控制 Topthree 與 Banner 重疊的程度 */
-    //   z-index: 10;
-    //   margin-bottom: 30px; /* 與下方內容的間距 */
-    //   position: relative;
-    //   @media (max-width: 1024px) {
-    //     margin-top: -100px; /* 控制 Topthree 與 Banner 重疊的程度 */
-    //   }
-    //   @media (max-width: 768px) {
-    //     margin-top: -80px; /* 控制 Topthree 與 Banner 重疊的程度 */
-    //   }
-    //   @media (max-width: 450px) {
-    //     margin-top: -160px; /* 控制 Topthree 與 Banner 重疊的程度 */
-    //   }
-    // }
-
     .articles {
       width: 100%;
     }
