--- a/src/components/booklist.astro
+++ b/src/components/booklist.astro
@@ -1439,7 +1439,6 @@ const initialFoods = await fetchInitialFoods();
 
 <style lang="scss" is:global>
   .food-header {
-    border: 1px solid red;
     text-align: center;
     width: 100%;
     max-width: 1200px;
@@ -1939,14 +1938,14 @@ const initialFoods = await fetchInitialFoods();
   .spinner {
     width: 40px;
     height: 40px;
-    border: 4px solid rgba(255, 255, 255, 0.3);
+    border: 4px solid rgba(0, 0, 0, 0.8);
     border-radius: 50%;
-    border-top-color: #f37562;
+    border-top-color: #ebe54a;
     animation: spin 1s linear infinite;
   }
 
   .load-more-text {
-    color: #ffffff;
+    color: #000;
     font-size: 16px;
   }
 
