--- a/src/components/foot.astro
+++ b/src/components/foot.astro
@@ -4,7 +4,7 @@
 
 <footer>
   <div class="w-full mx-auto md:py-10 py-5 text-center bg-[#000000]">
-    <p class="text-white px-2 text-[14px] md:text-base">
+    <p class="text-white px-[12px] text-[14px] md:text-base">
       聯合線上公司 著作權所有© udn.com All Rights Reserved.
     </p>
   </div>
