--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -444,6 +444,9 @@ import { pgwWrap } from "../js/pgw.js";
               bottom: -2px;
               left: 0;
               z-index: 1;
+              @media (max-width: 768px) {
+                opacity: 0;
+              }
             }
           }
         }
@@ -469,19 +472,19 @@ import { pgwWrap } from "../js/pgw.js";
               opacity: 1;
               position: relative;
 
-              &:before {
-                content: "";
-                background-image: url("/image/nav_bowl.svg");
-                background-repeat: no-repeat;
-                background-position: center;
-                background-size: contain;
-                width: 35px;
-                height: 29px;
-                position: absolute;
-                bottom: -2px;
-                left: 0;
-                z-index: 1;
-              }
+              // &:before {
+              //   content: "";
+              //   background-image: url("/image/nav_bowl.svg");
+              //   background-repeat: no-repeat;
+              //   background-position: center;
+              //   background-size: contain;
+              //   width: 35px;
+              //   height: 29px;
+              //   position: absolute;
+              //   bottom: -2px;
+              //   left: 0;
+              //   z-index: 1;
+              // }
             }
           }
         }
@@ -507,19 +510,19 @@ import { pgwWrap } from "../js/pgw.js";
               opacity: 1;
               position: relative;
 
-              &:before {
-                content: "";
-                background-image: url("/image/nav_bowl.svg");
-                background-repeat: no-repeat;
-                background-position: center;
-                background-size: contain;
-                width: 35px;
-                height: 29px;
-                position: absolute;
-                bottom: -2px;
-                left: 0;
-                z-index: 1;
-              }
+              // &:before {
+              //   content: "";
+              //   background-image: url("/image/nav_bowl.svg");
+              //   background-repeat: no-repeat;
+              //   background-position: center;
+              //   background-size: contain;
+              //   width: 35px;
+              //   height: 29px;
+              //   position: absolute;
+              //   bottom: -2px;
+              //   left: 0;
+              //   z-index: 1;
+              // }
             }
           }
         }
