--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,11 +17,11 @@ const articleStyle = `background-image: url('${bgImageUrl}');`;
 ---
 
 <Layout>
-  <!-- <Nav /> -->
-  <!-- <Banner /> -->
+  <Nav />
+  <Banner />
   <section class="articles" style={articleStyle}>
-    <!-- <Topthree /> -->
-    <!-- <Booklist /> -->
+    <Topthree />
+    <Booklist />
   </section>
   <Spnosor />
   <Rolltop />
