--- a/src/components/ActFlow.astro
+++ b/src/components/ActFlow.astro
@@ -50,6 +50,10 @@
   .actflow {
     width: 90%;
     margin-bottom: 80px;
+    @media (max-width: 1024px) {
+      width: 100%;
+      margin-bottom: 60px;
+    }
 
     &__container {
       display: flex;
@@ -58,6 +62,11 @@
       gap: 20px;
       max-width: 1200px;
       margin: 0 auto;
+      @media (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+        gap: 0px;
+      }
     }
 
     &__step {
@@ -78,12 +87,33 @@
       justify-content: center;
       flex-shrink: 0;
       gap: 10px;
+      @media (max-width: 1024px) {
+        width: 165px;
+        height: 165px;
+      }
+      @media (max-width: 900px) {
+        width: 135px;
+        height: 135px;
+      }
+      @media (max-width: 768px) {
+        width: 195px;
+        height: 195px;
+      }
     }
 
     &__icon {
       width: 90px;
       object-fit: contain;
       object-position: center;
+      @media (max-width: 1024px) {
+        width: 70px;
+      }
+      @media (max-width: 900px) {
+        width: 60px;
+      }
+      @media (max-width: 768px) {
+        width: 90px;
+      }
     }
 
     &__title {
@@ -93,6 +123,15 @@
       text-align: center;
       line-height: 1.3;
       display: block;
+      @media (max-width: 1024px) {
+        font-size: 20px;
+      }
+      @media (max-width: 900px) {
+        font-size: 18px;
+      }
+      @media (max-width: 768px) {
+        font-size: 22px;
+      }
     }
 
     &__arrow {
@@ -101,12 +140,25 @@
       justify-content: center;
       height: 195px;
       flex-shrink: 0;
+      @media (max-width: 1024px) {
+        height: 165px;
+      }
+      @media (max-width: 900px) {
+        height: 135px;
+      }
+      @media (max-width: 768px) {
+        height: 65px;
+      }
     }
 
     &__arrow-img {
       width: 20px;
       height: auto;
       object-fit: contain;
+      @media (max-width: 768px) {
+        width: 30px;
+        content: url("./image/down_arrow.svg");
+      }
     }
   }
 </style>
