--- a/src/components/ActPrize.astro
+++ b/src/components/ActPrize.astro
@@ -47,11 +47,10 @@
 
 <style lang="scss" scoped>
   .actprize {
-    width: 50%;
+    max-width: 1200px;
     margin-bottom: 80px;
 
     &__container {
-      max-width: 1200px;
       margin: 0 auto;
       padding: 0 20px;
     }
@@ -61,7 +60,10 @@
       grid-template-columns: repeat(2, 1fr);
       gap: 60px 40px;
       justify-items: center;
-      padding: 30px 0;
+      @media (max-width: 768px) {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 40px 20px;
+      }
     }
 
     &__card {
