first sweetalert2 popup almost doneeeeeeeeeeeeeeeeeeeeeeeeee!!!

--- a/src/components/Act.astro
+++ b/src/components/Act.astro
@@ -27,7 +27,7 @@ import Actpopup from "./ActPopup.astro";
 <style lang="scss" scoped>
   .act {
     width: 100%;
-    background-image: url("./image/500bowlbg.png");
+    background-image: url("/image/500bowlbg.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
