--- a/src/components/ActFlow.astro
+++ b/src/components/ActFlow.astro
@@ -157,7 +157,7 @@
       object-fit: contain;
       @media (max-width: 768px) {
         width: 30px;
-        content: url("./image/down_arrow.svg");
+        content: url("/image/down_arrow.svg");
       }
     }
   }
