--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -121,7 +121,8 @@ import "../styles/global.css";
     <slot />
   </body>
 
-  <style>
+  <style lang="scss" is:global>
+    @import "../styles/sweetalert2.scss";
     html,
     body {
       margin: 0;
