--- a/src/pages/rules.astro
+++ b/src/pages/rules.astro
@@ -10,7 +10,7 @@ import { pgwWrap } from "../js/pgw.js";
 
 // 預先處理圖片URL
 const bgImageUrl = pgwWrap("/image/bg3b.png");
-const bgImageMobileUrl = pgwWrap("./image/bg3bM.png", true); // 手機版不使用PGW
+const bgImageMobileUrl = pgwWrap("./image/bg3bM.png", true);
 
 // 生成內聯樣式
 const articleStyle = `background-image: url('${bgImageUrl}');`;
