--- a/src/components/booklist.astro
+++ b/src/components/booklist.astro
@@ -1940,7 +1940,7 @@ const initialFoods = await fetchInitialFoods();
     height: 40px;
     border: 4px solid rgba(0, 0, 0, 0.8);
     border-radius: 50%;
-    border-top-color: #ebe54a;
+    border-top-color: #f46c00;
     animation: spin 1s linear infinite;
   }
 
